--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Tindev</title>
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://tindev.guru 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *;**script-src 'self' https://tindev.guru 'unsafe-inline' 'unsafe-eval';** ">
 </head>
 
 <body>
