fix: full permission string

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Tindev</title>
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://tindev.guru 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *;**script-src 'self' https://tindev.guru 'unsafe-inline' 'unsafe-eval';** ">
+  <meta http-equiv="Content-Security-Policy" content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;">
 </head>
 
 <body>
