fix: content-policy to retrieve google fonts [again 3]

--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <title>Tindev</title>
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self';
-  script-src 'report-sample' 'self';
-  style-src 'report-sample' 'self' https://fonts.googleapis.com;
-  object-src 'none';
-  base-uri 'self';
-  connect-src 'self';
-  font-src 'self';
-  frame-src 'self';
-  img-src 'self';
-  manifest-src 'self';
-  media-src 'self';
-  worker-src 'none';">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 
