--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <title>Tindev</title>
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://fonts.googleapis.com; 'self' 'unsafe-hashes' 'sha256-Kfe2i9XSy7X18FCIGp1lPEXObqlELvKGl2UVep9p0ko=';">
+  <meta http-equiv="Content-Security-Policy" content="style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 
