--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
   <meta name="theme-color" content="#000000" />
   <title>Tindev</title>
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
+  <meta http-equiv="Content-Security-Policy" content="
+    connect-src 'self';
+    default-src 'none';
+    img-src 'self';
+    manifest-src 'self';
+    script-src-elem 'self';
+    style-src-elem 'self';
+  ">
+
 </head>
 
 <body>
