--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <title>Tindev</title>
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
   <meta http-equiv="Content-Security-Policy" content="
-    connect-src 'self';
-    default-src 'none';
-    img-src 'self';
-    manifest-src 'self';
-    script-src-elem 'self';
-    style-src-elem 'self';
+    connect-src 'unsafe-inline';
+    default-src 'unsafe-inline';
+    img-src 'unsafe-inline';
+    manifest-src 'unsafe-inline';
+    script-src-elem 'unsafe-inline';
+    style-src-elem 'unsafe-inline';
   ">
 
 </head>
