--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     script-src-elem 'self';
     script-src 'self';
     style-src-elem 'self';
-    style-src 'self';
+    style-src 'self' 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=' 'sha256-ofD561pbZp1IM+fYyqfHKdYkyF2oLv0h+L9l0UhbRBo=';
   ">
 
 </head>
