--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
     default-src 'self';
     img-src 'self';
     manifest-src 'self';
-    script-src-elem 'self';
-    script-src 'self';
-    style-src-elem 'self';
-    style-src 'self' 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=' 'sha256-ofD561pbZp1IM+fYyqfHKdYkyF2oLv0h+L9l0UhbRBo=';
+    script-src-elem 'self' 'unsafe-inline';
+    script-src 'self' 'unsafe-inline';
+    style-src-elem 'self' 'unsafe-inline';
+    style-src 'self' 'unsafe-inline';
   ">
 
 </head>
