--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     script-src-elem 'self' 'unsafe-inline';
     script-src 'self' 'unsafe-inline';
     style-src-elem 'self' 'unsafe-inline';
-    style-src 'self' 'sha256-ofD561pbZp1IM+fYyqfHKdYkyF2oLv0h+L9l0UhbRBo=' 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=';
+    style-src 'sha256-ofD561pbZp1IM+fYyqfHKdYkyF2oLv0h+L9l0UhbRBo=' 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=';
   ">
 
 </head>
