--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
   <meta http-equiv="Content-Security-Policy" content="
     style-src-elem 'self';
-    style-src 'safe' 'sha256-ofD561pbZp1IM+fYyqfHKdYkyF2oLv0h+L9l0UhbRBo=' 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=';
+    style-src 'self' 'sha256-ofD561pbZp1IM+fYyqfHKdYkyF2oLv0h+L9l0UhbRBo=' 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=';
   ">
 
 </head>
