--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   <title>Tindev</title>
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
   <meta http-equiv="Content-Security-Policy" content="
-    style-src-elem 'self';
-    style-src 'self';
+    style-src-elem 'self' 'unsafe-inline';
+    style-src 'self' 'unsafe-inline';
   ">
 
 </head>
