--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <title>Tindev</title>
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
-  <meta http-equiv="Content-Security-Policy" content="
-    style-src-elem 'self' 'unsafe-inline';
-    style-src 'self' 'unsafe-inline';
-  ">
-
+  <meta http-equiv="Content-Security-Policy" content="">
 </head>
 
 <body>
