--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <title>Tindev</title>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
   <meta http-equiv="Content-Security-Policy" content="">
 </head>
