feat: adding google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
   <title>Tindev</title>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
+
+  <!-- Google Analytics -->
+  <script>
+  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+  ga('create', 'G-RW9GZP32XJ', 'auto');
+  ga('send', 'pageview');
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
 </head>
 
 <body>
