--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,15 @@
   <meta name="keywords" content="dev,developer,tinder,guru,piada,qa" />
 
   <!-- Google Analytics -->
-  <script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'G-RW9GZP32XJ', 'auto');
-  ga('send', 'pageview');
-  </script>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RW9GZP32XJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RW9GZP32XJ');
+</script>
   <!-- End Google Analytics -->
 </head>
 
